ADD: instructions on building CZT with Eclipse m2e (experimental)